Set z-index for header to ensure transformed icons won`t overlap it

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -11,6 +11,7 @@
 .header {
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .header-container {
